tests/out/error/if/branch_no_return.in.bt
fun foo() i32 {
	return if true { 1 } else { }
}
